--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,14 +27,14 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".rented_product_list"
+            android:name=".RentedProductList"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".Renting.GiveOnRent.addProduct"
+            android:name=".Renting.GiveOnRent.AddProduct"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
